Fix issue where bottom of board-name on board-thumbnail component was getting slightly cut off

--- a/frontend/src/app/features/dashboard-page/components/board-thumbnail/board-thumbnail.component.scss
+++ b/frontend/src/app/features/dashboard-page/components/board-thumbnail/board-thumbnail.component.scss
@@ -61,6 +61,7 @@
   -webkit-box-orient: vertical; /* Ensures the box is oriented vertically */
   overflow: hidden; /* Clips the overflowing text */
   text-overflow: ellipsis; /* Adds ellipsis to truncated text */
+  padding-bottom : 2px;
 }
 
 
